--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id 'java'
-    id 'io.freefair.lombok' version '5.3.0'
 }
 
 group 'ru.netology'
@@ -18,6 +17,8 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
     testImplementation 'com.codeborne:selenide:5.19.0'
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
+    testImplementation 'io.rest-assured:rest-assured:4.3.3'
+    testImplementation 'com.google.code.gson:gson:2.8.6'
 }
 
 test {
