--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,9 +8,10 @@ branches:
 
 build: off
 
+
 install:
   - java -jar ./artifacts/app-card-delivery.jar &
-  - chmod +x gradlew
 
 build_script:
-  - ./gradlew test --info -Dselenide.headless=true
+  - chmod +x gradlew
+  - ./gradlew test -Dselenide.headless=true --info
